# async-httpd-data-collector

./: .gitignore  .yamlfmt.yml  README.md  mkdocs.yml  pyproject.toml  pyrightconfig.json  requirements.txt
.github/workflows/: docs.yml  publish-pypi.yml  publish.yml  test.yml
ahttpdc/read/: daemon.py  database_interface.py  interface.py
ahttpdc/read/fetch/: fetcher.py
ahttpdc/read/query/: interface.py  query.py
ahttpdc/read/query/parse/: data.py
ahttpdc/read/store/: collector.py
ahttpdc/read/store/parse/: parser.py
ahttpdc/reads/: interface.py
ahttpdc/reads/fetch/: async_fetch.py
ahttpdc/reads/fetch/parse/: parser.py
ahttpdc/reads/query/: async_query.py
docs/: api.md  architecture.md  getting-started.md  index.md
docs/analysis/: index.md  prediction.md
examples/: daemon_example.py  dev_dashboard.py  fetch.py  minima_dashboard_example.py  minimal_dashboard.py  query.py  query_example.py
reads/: interface.py
reads/fetch/: async_fetch.py
reads/query/: async_query.py
test/: dev_server.py
test/reads/: test_interface.py
tests/: dev_server.py
tests/read/: test_interface.py
tests/read/fetch/: test_fetcher.py
tests/read/query/: test_query.py
tests/reads/: test_interface.py
tests/reads/fetch/: test_fetcher.py
tests/reads/query/: test_query.py
tests/ui/: dev_dashboard.py
