[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
authors = [
  {name = 'Piotr Krzysztof Lis', email = 'piotrlis555@gmail.com'}
]
mantainers = [
  {name = 'Piotr Krzysztof Lis', email = 'piotrlis555@gmail.com'}
]
description = "Gateway facilitating asyncronous communication between sensory data-emitting devices, InfluxDB and the user."
readme = "README.md"
readme-content-type = "text/markdown"
license = {file = "LICENSE"}
keywords = ['async', 'http', 'data', 'collector', 'influxdb', 'nodemcu', 'arduino', 'sensors', 'json']
dynamic = ["version"]
name = "async-httpd-data-collector"
requires-python = ">=3.8"
dependencies = [
  "influxdb-client[async]",
  "reactivex",
  "certifi",
  "python-dateutil",
  "setuptools",
  "urllib3",
  "aiohttp",
  "aiocsv",
  "typing_extensions",
  "aiosignal",
  "attrs",
  "frozenlist",
  "multidict",
  "yarl",
  "six",
  "idna",
  "pandas",
  "numpy",
  "pytz",
  "tzdata",
]
classifiers = [
  "Development Status :: 3 - Alpha",
  "Intended Audience :: Developers",
  "Topic :: Database",
  "Topic :: Software Development :: Libraries :: Python Modules",
  "Programming Language :: Python :: 3",
]

[project.optional-dependencies]
test = [
  "pytest",
  "pytest-asyncio",
  "iniconfig",
  "pluggy",
  "dash",
  "Flask",
  "Werkzeug",
  "plotly",
  "dash-html-components",
  "dash-core-components",
  "dash-table",
  "importlib_metadata",
  "requests",
  "retrying",
  "Jinja2",
  "nest-asyncio",
  "itsdangerous",
  "click",
  "blinker",
  "tenacity",
  "MarkupSafe",
  "packaging",
  "zipp",
  "charset-normalizer",
]


[project.urls]
Repository = "https://github.com/straightchlorine/async-httpd-data-collector"
Issues = "https://github.com/straightchlorine/async-httpd-data-collector/issues"

[tool.hatch.version]
path = "ahttpdc/__init__.py"

[tool.hatch.build.targets.wheel]
packages = ["ahttpdc"]

[tool.ruff.lint]
select = ["E4", "E7", "E9", "F", "B"]
ignore = ["E501"]
unfixable = ["B"]

[tool.ruff.lint.per-file-ignores]
"__init__.py" = ["E402"]
"**/{tests,docs,tools}/*" = ["E402"]

[tool.ruff.format]
quote-style = "single"
